--- a/public/index.css
+++ b/public/index.css
@@ -1,3 +1,118 @@
 h1{
 	color: blue;
 }
+h2{
+	color: black;
+}
+
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.hero-image {
+  background-image: url("blueswirl.png");
+  background-color: #cccccc;
+  height: 750px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+.hero-image2 {
+  background-image: url("pinkSwirl.png");
+  background-color: #cccccc;
+  height: 750px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+.hero-text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: black;
+}
+
+.UserData {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  
+  color: black;
+}
+
+
+.PersonalStyle
+{
+	text-align: left;
+  position: fixed;
+  top: 0%;
+  left: 0%;
+  left: -550px;
+  top: -250px;
+  
+  
+}
+
+
+.Educationskills
+{
+	text-align: left;
+  position: fixed;
+  top: 0%;
+  left: 0%;
+  left: -200px;
+  top: -250px;
+  
+  
+}
+
+.ExperienceReferences
+{
+	text-align: left;
+  position: fixed;
+  top: 0%;
+  left: 0%;
+  left: 200px;
+  top: -250px;
+  
+  
+}
+
+.SendCv2
+{	position: fixed;
+	top: 250px;
+}
+
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+/* Change the link color to #111 (black) on hover */
+li a:hover {
+  background-color: #111;
+}
